@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_USE_SSL and CURLUSESSL_* constants.
+
         * Added CURLOPT_APPEND, CURLOPT_COOKIESESSION, CURLOPT_DIRLISTONLY,
           CURLOPT_KEYPASSWD, CURLOPT_TELNETOPTIONS.
 
